# aliexpress-store-scraper

./: .env.example  .gitignore  CLI_README.md  README.md  SESSION_MANAGEMENT.md  SESSION_PERSISTENCE.md  aliexpress_client.py  aliexpress_instyler_20250812.json  aliexpress_session_cookies.json  batch_seller_processor.py  business_license_processor.py  captcha_solver.py  cli.py  cli_demo.sh  cookie_generator.py  core_seller_cli.py  core_seller_extractor.py  enhanced_aliexpress_client.py  enhanced_cli.py  example.py  extracted_contacts.json  nike_100.json  nike_100_final.json  nike_100_seller_contact_info.json  nike_100_with_sellers.json  nike_100_with_sellers_retried.json  nike_sellers.csv  ocr_results.json  pyproject.toml  store_credentials_network_cli.py  store_credentials_network_results.json  store_credentials_network_scraper.py  test_store_ids.txt
aliexpress_store_scraper/: __init__.py  __main__.py
aliexpress_store_scraper/cli/: cli.py  core_seller_cli.py  enhanced_cli.py  store_credentials_network_cli.py  unified_pipeline.py
aliexpress_store_scraper/clients/: __init__.py  enhanced_aliexpress_client.py
aliexpress_store_scraper/processors/: __init__.py  batch_seller_processor.py  brand_to_seller_pipeline.py  business_license_processor.py  core_seller_extractor.py  seller_data_populator.py  store_credentials_network_scraper.py  unified_seller_pipeline.py
aliexpress_store_scraper/utils/: async_cookie_generator.py  captcha_solver.py  logger.py  retry_failed_sellers.py  transform_ocr_to_csv.py
archive/: fix_contact_duplication_standalone.py
typings/pytesseract/: pytesseract.pyi
